--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "eslint": "7.18.0",
     "eslint-config-htmlacademy": "2.1.0",
     "eslint-plugin-react": "7.22.0",
-    "webpack": "4.46.0"
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "engines": {
     "node": ">=12.0.0"
