--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "classnames": "2.2.6",
+    "dayjs": "1.10.4",
     "leaflet": "1.7.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
